Cleanup more Forge internals
- Replace some Guava usage with modern Java equivs
- More finals and static finals
- More allocating lambda avoidance
- Use more EventBus#fire
- General code cleanup